# rinha-backend-2023-q3-caranguejo

./: Cargo.toml  Dockerfile  docker-compose.yml  init.sql  nginx.conf
.sqlx/: query-0501e96015312ce5c929514dd130765e5ff1a7c6b54af0b441914699e114c8e1.json  query-086a12d29f9222a6e7b7e754d11cdc7232679a7c0db87923063015438456e08e.json  query-5d9085f5b105df576b842e35697aa8a71b48aa733682f966b283484191bff429.json  query-6ed5e6cad504e34c8627eacb438f380385759d7471c1fac3589d8cb1e7fc2012.json  query-dfde2f7873f55b1fc6b9f9b428f4937db7e6c788af411fb51c2898465d704693.json
migrations/: 20230817094412_init.up.sql
src/: main.rs  schema.rs  services.rs
src/models/: person.rs
src/routes/: mod.rs  people.rs
