[package]
name = "rinha-backend-2023-q3-caranguejo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["macros"]}
axum-extra = "0.7.7"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["cors"] }
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.4.1", features=["v4", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
thiserror = "1.0.47"